--- a/src/tokens/_semantic-colors.scss
+++ b/src/tokens/_semantic-colors.scss
@@ -38,7 +38,7 @@ $text-white: $pccs-w;
 $text-error: $pccs-s2;
 
 /* Scrollareaコンポーネントのスクロールバーの色 */
-$scrollbar-thumb: $pccs-s20;
+$scrollbar-thumb: $pccs-gy7-5;
 
 /* スクロールバーのつまみ部分の色 */
 $scrollbar-track: $pccs-gy8-5;
